--- a/index.html
+++ b/index.html
@@ -123,6 +123,66 @@
 
 <div class="seperation"></div>
 
+<!--*Sıkça sorulan sorular-->
+<div class="faq">
+    <h2> Sıkça sorulan sorular</h2>
+    <div class="faqbox">
+        <span>Netfilix nedir?</span>
+        <span>&#43;</span>
+    </div>
+    <div class="faqbox">
+        <span>Netfilix'in maliyeti nedir?</span>
+        <span>&#43;</span>
+    </div>
+    <div class="faqbox">
+        <span>Nerede izleyebilirim?</span>
+        <span>&#43;</span>
+    </div>
+    <div class="faqbox">
+        <span>Nasil iptal ederim?</span>
+        <span>&#43;</span>
+    </div>
+
+</div>
+</div>
+<div class="seperation"></div>
+<!--*Footer-->
+<div class="footer">
+    <div class="questions">
+        Sorularınız mı var?0850-390-7444 numaralı telefonu arayın
+    </div>
+    <div class="footer-list">
+        <div class="footer-item">
+            <a href="#">SSS</a>
+            <a href="#">Yatırımcı İlişkileri</a>
+            <a href="#">Kullanım Koşulları</a>
+            <a href="#">Bize Ulaşın</a>
+        </div>
+        <div class="footer-item">
+            <a href="#">SSS</a>
+            <a href="#">Yatırımcı İlişkileri</a>
+            <a href="#">Kullanım Koşulları</a>
+            <a href="#">Bize Ulaşın</a>
+        </div>
+        <div class="footer-item">
+            <a href="#">SSS</a>
+            <a href="#">Yatırımcı İlişkileri</a>
+            <a href="#">Kullanım Koşulları</a>
+            <a href="#">Bize Ulaşın</a>
+        </div>
+        <div class="footer-item">
+            <a href="#">SSS</a>
+            <a href="#">Yatırımcı İlişkileri</a>
+            <a href="#">Kullanım Koşulları</a>
+            <a href="#">Bize Ulaşın</a>
+        </div>
+        <div>
+        </div>
+
+
+    </div>
+
+
 
 
 
